Fixed the max height for open boxes, which was too short.

--- a/src/Merchello.Web.UI/App_Plugins/Merchello/Common/Css/merchello.scss
+++ b/src/Merchello.Web.UI/App_Plugins/Merchello/Common/Css/merchello.scss
@@ -29,7 +29,7 @@ blockquote {
     &.control-group { margin-bottom: 0 !important; padding-bottom: 0; border-bottom: solid 1px #fff; }
     &.well { padding: 0; margin-bottom: 0; min-height: 0; }
 }
-.open { opacity: 1; max-height: 1000px; @include transition; 
+.open { opacity: 1; max-height: 99999px; @include transition; 
     &.control-group { padding-bottom: 30px; margin-bottom: 25px !important; border-bottom: 1px solid #f8f8f8; }
     &.well { padding: 19px; margin-bottom: 20px; }
 }
